--------------------------

	* Add new "body" property to request objects, and deprecate
	"bodyParams". The new "body" property will contain a parsed
	version of the body, if possible. So: for
	"application/x-www-form-urlencoded" requests, "body" will have the
	same contents as "bodyParams"; for "application/json" requests,
	"body" will have an object with the parsed JSON body, etc.

	* Add robohydra/ to the plugin search path, so that plugins can be
	written as robohydra/PLUGINNAME/index.js. This saves one level in
	the directory structure which proved to be too deep for no gain.

	* Drop websocket.io dependency as it was outdated (spits out
	warning in Node 6.1.0) and ws could handle its usecase, too.

Version 0.6.4 (2016-02-23)
--------------------------

	* Disable snyk to avoid installation problems (only on Windows?).

Version 0.6.3 (2016-02-20)
--------------------------

	* Avoid bad plugin config when using pluginConfigDefaults.

	* Make the logger plugin compatible with streaming.

Version 0.6.2 (2015-11-12)
--------------------------

	* Add a new "pluginConfigDefaults" key to configuration files, to
	provide configuration defaults for all plugins.

	* Pass query parameters correctly when proxying requests by using
	the "proxyRequest" function directly (as opposed to using a
	"RoboHydraHeadProxy" head.

	* Don't die if the incoming request body is unparseable.

	* Tighten the versioned dependency on qs to avoid breaking
	compatibility with older versions of Node.

Version 0.6.1 (2015-07-09)
--------------------------

	* Allow inspection and deletion of hydras spawned by the summoner.
	Finally consider it fit for production, not an experiment.

	* Replayer plugin: big improvements, mostly in the UI.

	* New RoboHydraHeadReplayer head: it allows you to easily replay
	traffic files recorded with the replayer plugin.

	* Other small improvements, like fixes in the CORS plugin and a
	new option "delaydisabled" for the delayer plugin.
