@@ -25,7 +25,7 @@ var exceptions         = require('./exceptions.js'),
 (function () {
     "use strict";
 
-    var DYNAMIC_HEAD_PRIORITIES = ['normal', 'high'];
+    var DYNAMIC_HEAD_PRIORITIES = ['admin', 'normal', 'high'];
 
     /**
      * All RoboHydra public API.
@@ -93,6 +93,8 @@ var exceptions         = require('./exceptions.js'),
         });
 
         // Register special plugins
+        // Admin-related, dynamic heads
+        this._registerPluginObject({name: '*admin-dynamic*'});
         // Admin
         var adminPlugin = require('./plugins/admin.js');
         var adminPluginConfig = extendObject(this.extraVars,
@@ -183,9 +185,10 @@ var exceptions         = require('./exceptions.js'),
     };
     /**
      * Adds a new (dynamic) head into a hydra. The new head is added
-     * at the beginning of the appropriate pseudo-plugin ("*dynamic*"
-     * by default, "*priority-dynamic*" if the priority is set to
-     * "high"). The order of the plugins is: special admin plugin
+     * at the beginning of the appropriate pseudo-plugin
+     * ("*admin-dynamic*", "*priority-dynamic*", or "*dynamic*", if
+     * the priority given is "admin", "high", or "normal"). The order
+     * of the plugins is: "*admin-dynamic*", special admin plugin
      * (which is normally not visible in the admin interface!),
      * "*priority-dynamic*", "*dynamic*", "*current-scenario*", and
      * regular plugins.
@@ -194,7 +197,7 @@ var exceptions         = require('./exceptions.js'),
      * @param {RoboHydraHead} head The head to add
      * @param {Object} opts Options
      * @param {String} opts.priority The priority of the head. Can be
-     * "normal" or "high"
+     * "normal", "high", or "admin".
      */
     RoboHydra.prototype.registerDynamicHead = function(head, opts) {
         opts = opts || {};
@@ -203,7 +206,14 @@ var exceptions         = require('./exceptions.js'),
             throw new RoboHydraException("Invalid head priority '" + prio + "'");
         }
 
-        var pseudoPluginName = prio === 'high' ? '*priority-dynamic*' : '*dynamic*';
+        var pseudoPluginName;
+        if (prio === 'admin') {
+            pseudoPluginName = '*admin-dynamic*';
+        } else if (prio === 'high') {
+            pseudoPluginName = '*priority-dynamic*';
+        } else {
+            pseudoPluginName = '*dynamic*';
+        }
         this._registerHeadsInPseudoPlugin([head], pseudoPluginName);
     };
     RoboHydra.prototype._registerHeadsInPseudoPlugin = function(heads, pseudoPluginName) {
